@@ -1,3 +1,8 @@
+Wed Jun 29 10:38:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Thread_Manager.cpp:
+          Fixed compile error in some environments
+
 Wed Jun 29 07:56:54 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * ace/config-lynxos.h:
